--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="style/main.css">
 
     <!--responsividade-->
-    <link rel="stylesheet" href="/style/responsive.css">
+    <link rel="stylesheet" href="style/responsive.css">
     
     <!-- owl css -->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
@@ -51,34 +51,34 @@
     <div class="carrosel-games">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img src="/img/mini1.jpg" alt="" srcset="">
+                <img src="img/mini1.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini2.jpg" alt="" srcset="">
+                <img src="img/mini2.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini3.jpg" alt="" srcset="">
+                <img src="img/mini3.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini4.jpg" alt="" srcset="">
+                <img src="img/mini4.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini5.jpg" alt="" srcset="">
+                <img src="img/mini5.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini6.jpg" alt="" srcset="">
+                <img src="img/mini6.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini7.jpg" alt="" srcset="">
+                <img src="img/mini7.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini8.jpg" alt="" srcset="">
+                <img src="img/mini8.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini9.jpg" alt="" srcset="">
+                <img src="img/mini9.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini10.jpg" alt="" srcset="">
+                <img src="img/mini10.jpg" alt="" srcset="">
             </div>
         </div>
     </div>
@@ -86,34 +86,34 @@
     <div class="carrosel-games">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img src="/img/mini11.jpg" alt="" srcset="">
+                <img src="img/mini11.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini12.jpg" alt="" srcset="">
+                <img src="img/mini12.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini13.jpg" alt="" srcset="">
+                <img src="img/mini13.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini14.jpg" alt="" srcset="">
+                <img src="img/mini14.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini15.jpg" alt="" srcset="">
+                <img src="img/mini15.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini16.jpg" alt="" srcset="">
+                <img src="img/mini16.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini17.jpg" alt="" srcset="">
+                <img src="img/mini17.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini18.jpg" alt="" srcset="">
+                <img src="img/mini18.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini19.jpg" alt="" srcset="">
+                <img src="img/mini19.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="/img/mini20.jpg" alt="" srcset="">
+                <img src="img/mini20.jpg" alt="" srcset="">
             </div>
         </div>
     </div>
